# ai-toolkit

./: CLAUDE.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md  EXAMPLES.md
tools/ai-cut/: Cargo.toml
tools/ai-diff/: Cargo.toml
tools/ai-grep/: Cargo.toml  README.md
tools/ai-grep/src/: main.rs
tools/ai-join/: Cargo.toml
tools/ai-sort/: Cargo.toml
tools/ai-tee/: Cargo.toml
tools/ai-uniq/: Cargo.toml  README.md
tools/ai-uniq/src/: main.rs
tools/ai-validate/: Cargo.toml
tools/ai-wc/: Cargo.toml
tools/ai-wc/src/: main.rs
tools/aicc/: Cargo.toml
tools/aiprobe/: Cargo.toml
tools/aistream/: Cargo.toml
tools/api-endpoint-tester/: Cargo.toml
tools/auto-verify/: Cargo.toml
tools/build-knowledge-graph/: Cargo.toml
tools/bullshit-score/: Cargo.toml
tools/chunker/: Cargo.toml
tools/citation-check/: Cargo.toml
tools/confidence-language/: Cargo.toml
tools/crowdverify/: Cargo.toml
tools/devil-advocate/: Cargo.toml
tools/explain-failure/: Cargo.toml
tools/extract-claims/: Cargo.toml
tools/fact-density/: Cargo.toml
tools/factdiff/: Cargo.toml
tools/failure-modes/: Cargo.toml
tools/find-contradictions/: Cargo.toml
tools/ghostwriter/: Cargo.toml
tools/import-validator/: Cargo.toml
tools/netprobe/: Cargo.toml
tools/rate-limit-analyzer/: Cargo.toml
tools/ratelimit-check/: Cargo.toml
tools/reality-check/: Cargo.toml
tools/semdiff/: Cargo.toml  README.md
tools/semdiff/src/: main.rs
tools/strace-ai/: Cargo.toml
tools/syntax-check/: Cargo.toml
tools/tokentop/: Cargo.toml
tools/valgrind-ai/: Cargo.toml
tools/verify-logger/: Cargo.toml
tools/verifychain/: Cargo.toml
tools/verifyd/: Cargo.toml
(+2 files in other folders)
