[workspace]
members = [
    "tools/ai-wc",
    "tools/ai-diff", 
    "tools/ai-grep",
    "tools/ai-sort",
    "tools/ai-uniq",
    "tools/ai-cut",
    "tools/ai-join",
    "tools/ai-validate", "tools/aiprobe", "tools/ghostwriter", "tools/explain-failure", "tools/reality-check", "tools/fact-density", "tools/citation-check", "tools/confidence-language", "tools/bullshit-score", "tools/verifychain", "tools/crowdverify", "tools/failure-modes", "tools/devil-advocate", "tools/verify-logger", "tools/auto-verify", "tools/semdiff", "tools/extract-claims", "tools/build-knowledge-graph", "tools/find-contradictions", "tools/chunker", "tools/netprobe", "tools/ratelimit-check", "tools/syntax-check", "tools/import-validator", "tools/api-endpoint-tester", "tools/rate-limit-analyzer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ai-toolkit"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
